a very basic responsive layout

--- a/A Very Basic html website layout/style.css
+++ b/A Very Basic html website layout/style.css
@@ -1,63 +1,5 @@
-
-*{
-margin: 5px;
-padding: 0px;
-    list-style: none;
-    font-family: sans-serif;
-    text-decoration: none;
-    
+.box{
+background-color: red;
+    width: 400px;
+    height: 400px;
 }
-.layout{
-    margin:0px;
-    padding: 0px;
-    border: 2px solid black;
-    width:100%;
-  height: 1000px;
-    background-color: lightgray;
-    word-wrap: break-word;
-    
- 
-    
-}
-.content h2{
-    margin: 30px;
-}
-.header{
-    background-color: red;
-    color:white;
-    line-height: 50px;
-    text-align: center;
-}
-.menu {
- background-color: lightsalmon;
-    text-decoration: none;
-    display: flex;
-    line-height: 30px;
-    box-sizing: border-box;
-
-}
-.content{
-float: left;
-    width: 60%;
-}
-.sidebar{
-    padding-top:100px;
-    float: right;
-    width: 20%;
-    color:indianred;
-}
-.footer{
-clear: both;
-    background-color: lightsalmon;
-    line-height: 50px;
-    text-align: center;
-    color:white;
-    font-size: 20px;
-    font-weight:bold;
-}
-.sidebar>ul{
-    border: 2px solid black;
-}
-
-
-
