--- a/A basic responsive website layout/style.css
+++ b/A basic responsive website layout/style.css
@@ -226,6 +226,9 @@ display: none;
         
         
     }
+    .social-media{
+order:-2;}
+
     header{
         flex-direction: column;
         width: 100%;
